--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
         android:layout_width="120dp"
         android:layout_height="80dp"
         style="@style/BtMenu"
-        android:text="@string/aceptar"
+        android:text="@string/confirmar"
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
         app:layout_constraintEnd_toStartOf="@+id/gVer4"
         app:layout_constraintStart_toStartOf="@+id/gVer3"
