--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,25 +111,45 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btEntrar_login"
+        style="@style/BtMenu"
         android:layout_width="120dp"
         android:layout_height="80dp"
-        style="@style/BtMenu"
-        android:text="@string/confirmar"
+        android:text="@string/iniciarSesion"
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
-        app:layout_constraintEnd_toStartOf="@+id/gVer4"
-        app:layout_constraintStart_toStartOf="@+id/gVer3"
-        app:layout_constraintTop_toBottomOf="@+id/gHor4" />
+        app:layout_constraintEnd_toStartOf="@+id/gVer2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/gVer1"
+        app:layout_constraintTop_toBottomOf="@+id/gHor4"
+        app:layout_constraintVertical_bias="0.45" />
+
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btRegistro_login"
-        android:layout_width="120dp"
+        style="@style/BtMenu"
+        android:layout_width="0dp"
         android:layout_height="80dp"
         android:text="@string/registro"
-        style="@style/BtMenu"
         app:layout_constraintBottom_toTopOf="@+id/gHor5"
         app:layout_constraintEnd_toStartOf="@+id/gVer4"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/gVer3"
-        app:layout_constraintTop_toBottomOf="@+id/gHor5" />
+        app:layout_constraintTop_toBottomOf="@+id/gHor5"
+        app:layout_constraintVertical_bias="0.487" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btRegistroGmail_login"
+        style="@style/BtMenu"
+        android:layout_width="180dp"
+        android:layout_height="80dp"
+        android:drawableLeft="@drawable/gmail_logo"
+        android:text="@string/iniciarSesionGoogle"
+        app:layout_constraintBottom_toTopOf="@+id/gHor4"
+        app:layout_constraintEnd_toStartOf="@+id/gVer2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/gVer1"
+        app:layout_constraintTop_toBottomOf="@+id/gHor4"
+        app:layout_constraintVertical_bias="0.487" />
 
     <ImageView
         android:id="@+id/imageView"
