--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,9 +16,10 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+
         <item
-            android:id="@+id/nav_cerrarSesion"
-            android:icon="@android:drawable/ic_lock_power_off"
+            android:id="@+id/mainActivity"
+            android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/cerrar_sesion" />
     </group>
 </menu>
