--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintGuide_percent="0.9"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -77,8 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7"
-        />
+        app:layout_constraintGuide_percent="0.7" />
 
     <EditText
         android:id="@+id/edEmail_login"
@@ -116,8 +115,7 @@
         android:layout_height="80dp"
         android:text="@string/iniciarSesion"
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
-        app:layout_constraintEnd_toStartOf="@+id/gVer2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/gVer3"
         app:layout_constraintStart_toStartOf="@+id/gVer1"
         app:layout_constraintTop_toBottomOf="@+id/gHor4"
         app:layout_constraintVertical_bias="0.45" />
@@ -140,16 +138,15 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btRegistroGmail_login"
         style="@style/BtMenu"
-        android:layout_width="180dp"
+        android:layout_width="170dp"
         android:layout_height="80dp"
         android:drawableLeft="@drawable/gmail_logo"
         android:text="@string/iniciarSesionGoogle"
+        android:layout_marginRight="50dp"
         app:layout_constraintBottom_toTopOf="@+id/gHor4"
         app:layout_constraintEnd_toStartOf="@+id/gVer2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/gVer1"
         app:layout_constraintTop_toBottomOf="@+id/gHor4"
-        app:layout_constraintVertical_bias="0.487" />
+        app:layout_constraintStart_toEndOf="@id/gVer4" />
 
     <ImageView
         android:id="@+id/imageView"
