--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
 
         <item
             android:id="@+id/mainActivity"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@android:drawable/ic_lock_power_off"
             android:title="@string/cerrar_sesion" />
     </group>
 </menu>
